--- a/playercontrolswidget.ui
+++ b/playercontrolswidget.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0,0,0,0">
      <item>
-      <widget class="QPushButton" name="prev">
+      <widget class="QPushButton" name="prevButton">
        <property name="text">
         <string>Prev</string>
        </property>
@@ -31,7 +31,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="next">
+      <widget class="QPushButton" name="nextButton">
        <property name="text">
         <string>Next</string>
        </property>
