--- a/playercontrolswidget.ui
+++ b/playercontrolswidget.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_4">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0,0,0,0">
+    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,1,1,5,1,1,4">
      <item>
       <widget class="QPushButton" name="prevButton">
        <property name="text">
@@ -34,6 +34,19 @@
       <widget class="QPushButton" name="nextButton">
        <property name="text">
         <string>Next</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="seekBar">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -62,6 +75,12 @@
      </item>
      <item>
       <widget class="QSlider" name="Volume">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>100</width>
