--- a/playercontrolswidget.ui
+++ b/playercontrolswidget.ui
@@ -18,8 +18,20 @@
     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,1,1,6,1,1,4">
      <item>
       <widget class="QPushButton" name="prevButton">
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Prev</string>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>false</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -32,6 +44,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="nextButton">
+       <property name="layoutDirection">
+        <enum>Qt::LayoutDirection::RightToLeft</enum>
+       </property>
        <property name="text">
         <string>Next</string>
        </property>
@@ -74,9 +89,6 @@
            </property>
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
-           </property>
-           <property name="tickPosition">
-            <enum>QSlider::TickPosition::TicksBothSides</enum>
            </property>
           </widget>
          </item>
