--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -296,18 +296,23 @@ QStatusBar {
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
       </property>
-      <widget class="FileBrowserWidget" name="FileBrowser" native="true">
-       <property name="enabled">
-        <bool>true</bool>
+      <widget class="QStackedWidget" name="stackedWidget">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
        </property>
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+       <property name="currentIndex">
+        <number>1</number>
        </property>
+       <widget class="FileBrowserWidget" name="FileBrowser"/>
+       <widget class="QWidget" name="RemoteFileBrowser"/>
       </widget>
-      <widget class="MediaViewWidget" name="MainView" native="true"/>
+      <widget class="QStackedWidget" name="stackedWidget_2">
+       <widget class="MediaViewWidget" name="MainView"/>
+       <widget class="QWidget" name="RemoteView"/>
+      </widget>
      </widget>
     </item>
     <item>
