--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -296,7 +296,7 @@ QStatusBar {
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
       </property>
-      <widget class="QStackedWidget" name="stackedWidget">
+      <widget class="QStackedWidget" name="browserStack">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
@@ -307,9 +307,12 @@ QStatusBar {
         <number>1</number>
        </property>
        <widget class="FileBrowserWidget" name="FileBrowser"/>
-       <widget class="QWidget" name="RemoteFileBrowser"/>
+       <widget class="RemoteFileBrowser" name="RemoteBrowser"/>
       </widget>
-      <widget class="QStackedWidget" name="stackedWidget_2">
+      <widget class="QStackedWidget" name="viewStack">
+       <property name="currentIndex">
+        <number>1</number>
+       </property>
        <widget class="MediaViewWidget" name="MainView"/>
        <widget class="QWidget" name="RemoteView"/>
       </widget>
@@ -346,6 +349,7 @@ QStatusBar {
     <property name="title">
      <string>Settings</string>
     </property>
+    <addaction name="actionRemoteModeSwitch"/>
     <addaction name="chooseRoot"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -373,6 +377,11 @@ QStatusBar {
     <string>Exit</string>
    </property>
   </action>
+  <action name="actionRemoteModeSwitch">
+   <property name="text">
+    <string>Remote Mode</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -391,6 +400,12 @@ QStatusBar {
    <class>MediaViewWidget</class>
    <extends>QWidget</extends>
    <header>mediaviewwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>RemoteFileBrowser</class>
+   <extends>QWidget</extends>
+   <header>remotefilebrowser.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
