--- a/playercontrolswidget.ui
+++ b/playercontrolswidget.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_4">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,6,1,1,4">
+    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,6,1,0,1,4">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
@@ -177,6 +177,13 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Repeat">
+       <property name="text">
+        <string>Not Repeat</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="Mute">
